--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar">
+<nav class="navbar navbar-static-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target=".navbar-ex1-collapse">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -12,8 +12,8 @@
                 <img style="max-width:200px; margin-top: -7px;" src="/img/logo.png" alt="Skillray Transport Services">
             </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav pull-right">
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
                 <li class="active"><a [routerLink]="['Home']">Home</a></li>
                 <li><a [hidden]="isLoggedIn" [routerLink]="['Login']">Login</a></li>
                 <li><a [hidden]="!isLoggedIn" (click)="logout()">Logout</a></li>
@@ -31,9 +31,8 @@
                         <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
                     </ul>
                 </li>
-                <li><a [hidden]="!isLoggedIn" [routerLink]="['RecentCalibrations']">Recent Calibrations</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </nav>
 <auth-router-outlet></auth-router-outlet>
