--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -11,29 +11,32 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption">
-                    <div class="col-md-9">                        
-                        <img style="max-width:200px; margin-top: -7px;" src="/img/webcal.png" alt="Webcal Calibration Software">
-                        <h1>Webcal - Tacho Calibration Software.</h1>
-                        <p>Securely view and manage your your tacho data from your web browser.</p>
-                        <p>
-                            <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
-                            <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download Free</a>
-                        </p>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="/img/skillray-truck.png" alt="Skillray Transport Services" />
+                    <div class="row">
+                        <div class="col-xs-12 col-md-9">
+                            <img style="max-width:200px; margin-top: -7px;" class="hidden-xs" src="/img/webcal.png" alt="Webcal Calibration Software">
+                            <h1>Webcal - Tacho Calibration Software.</h1>
+                            <p>Securely view and manage your your tacho data from your web browser.</p>
+                            <p>
+                                <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
+                                <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download Free</a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-md-3 hidden-xs">
+                            <img src="/img/skillray-truck.png" alt="Skillray Transport Services" />
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div><!-- /.carousel -->
+</div>
+<!-- /.carousel -->
 <!-- Feature
     ==============================================-->
 
 <div class="container">
     <div class="row feature-box">
-        <div class="cnt-title">
+        <div class="col-xs-12 cnt-title">
             <h1>Manage your data online</h1>
             <span>With Webcal Connect you can easily view and manage your data directly from a web browser.</span>
         </div>
@@ -71,42 +74,42 @@
             <span>Webcal is downloadable software that you install and run on your computer.</span>
         </div>
 
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/1-HomeScreen.png" alt="Home Screen">
                 <h2>Beautifully Designed Software</h2>
                 <p>That's not just skin deep</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/2-NewDigital.png" alt="New Digital Calibration">
                 <h2>Super fast plaque generator</h2>
                 <p>Print a plaque in less than 5 seconds</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/3-TachoHistory.png" alt="Document History">
                 <h2>Comprehensive History</h2>
                 <p>Every calibration just a click away</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/4-DriverCardDetails.png" alt="Driver Card Details" style="max-height: 230px">
                 <h2>Built in Driver Card reader</h2>
                 <p>Can automatically read and display driver card data</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/5-Reports.png" alt="Reports">
                 <h2>Detailed Reports</h2>
                 <p>Can generate detailed PDF reports of your recent and upcoming calibrations</p>
             </div>
         </div>
-        <div class="col-md-4 col-xs-6 thumb">
+        <div class="col-md-4 col-xs-12 thumb">
             <div class="thumbnail">
                 <img class="img-responsive" src="/img/6-Options.png" alt="Options">
                 <h2>Highly Configurable</h2>
@@ -125,8 +128,7 @@
             <span>Get in touch with Skillray Transport Services.</span>
         </div>
         <div class="col-md-10">
-            <iframe class="actAsDiv" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                    src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;q=10%20rufford%20court%20hardwick%20grange%20warrington%20wa1%204rf&amp;aq=0&amp;ie=UTF8&amp;t=m&amp;z=13&amp;iwloc=A&amp;output=embed"></iframe>
+            <iframe class="actAsDiv" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;q=10%20rufford%20court%20hardwick%20grange%20warrington%20wa1%204rf&amp;aq=0&amp;ie=UTF8&amp;t=m&amp;z=13&amp;iwloc=A&amp;output=embed"></iframe>
         </div>
 
         <div class="col-md-2">
@@ -141,6 +143,6 @@
             <p>Tel: 01925 880081</p>
         </div>
     </div>
-    
+
     <div class="hr-divider"></div>
 </div>
