--- a/css/site.scss
+++ b/css/site.scss
@@ -250,6 +250,9 @@ footer {
 }
 
 @media(max-width: 480px) {
+    .carousel-caption {
+        bottom: 20px;
+    }
 }
 
 .navbar-toggle .icon-bar {
@@ -283,7 +286,6 @@ html {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 90px;
     background-color: #f5f5f5;
 }
 
