--- a/app/app.component.html
+++ b/app/app.component.html
@@ -13,13 +13,14 @@
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
                 <li class="active"><a [routerLink]="['Home']">Home</a></li>
                 <li><a [hidden]="isLoggedIn" [routerLink]="['Login']">Login</a></li>
-                <li><a [hidden]="!isLoggedIn" (click)="logout()">Logout</a></li>
                 <li><a [hidden]="!isLoggedIn" [routerLink]="['Dashboard']">Dashboard</a></li>
+                <li><a [hidden]="!isLoggedIn" [routerLink]="['RecentCalibrations']">Recent Calibrations</a></li>
+                <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
                 <li class="dropdown" [hidden]="!isLoggedIn">
-                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a [routerLink]="['QCCheck']">QC Check</a></li>
                         <li><a [routerLink]="['CentreCheck']">Centre Check</a></li>
@@ -28,7 +29,7 @@
                         <li><a [routerLink]="['CalibrationsDue']">Calibrations Due</a></li>
                         <li><a [routerLink]="['RegisterUser']">Register User</a></li>
                         <li><a [routerLink]="['ManageAccess']">Manage Access</a></li>
-                        <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
+                        <li><a [hidden]="!isLoggedIn" (click)="logout()">Logout</a></li>
                     </ul>
                 </li>
             </ul>
