--- a/app/generate-email/generate-email.component.html
+++ b/app/generate-email/generate-email.component.html
@@ -1,5 +1,107 @@
 <div class="container">
-    <h1>Generate Email</h1>
+    <h1>Generate Email Report</h1>
     <hr/>
+    <div class="row">
+        <div class="col-xs-6" *ngIf="_isAdministrator">
+            <div class="form-group">
+                <label for="clientName">Client</label>
+                <select id="clientName" name="clientName" class="form-control" [(ngModel)]="_selectedClientId" (change)="clearData()">
+                    <option [value]="item.id" *ngFor="#item of _clientNames">{{item.name}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-xs-6" *ngIf="_isAdministrator">
+            <div class="form-group">
+                <label for="reportType">Report Type</label>
+                <select id="reportType" name="reportType" class="form-control" [(ngModel)]="_reportType">
+                    <option value="RecentCalibrations">Recent Calibrations</option>
+                    <option value="CalibrationsDue">Calibrations Due</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="row" *ngIf="_generateReport">
+        <div class="col-xs-6">
+            <div class="form-group has-feedback">
+                <label for="from">From</label>
+                <input type="date" class="form-control" id="from" [(ngModel)]="_generateReport.from" required>
+                <span class="form-control-feedback"></span>
+            </div>
+        </div>
+        <div class="col-xs-6" *ngIf="_reportType === 'CalibrationsDue'">
+            <div class="form-group has-feedback">
+                <label for="to">To</label>
+                <input type="date" class="form-control" id="to" [(ngModel)]="_generateReport.to" required>
+                <span class="form-control-feedback"></span>
+            </div>
+        </div>
+    </div>
+    <div class="row" *ngIf="!_isRequesting">
+        <div class="col-xs-6">
+            <wc-button (click)="updateReport()" [isDisabled]="_isUpdating" [label]="'Update Report'" [workingLabel]="'Updating Report...'"></wc-button>
+        </div>
+    </div>
+    <div class="row">
+        <spinner [isRunning]="_isRequesting || _isUpdating"></spinner>
+    </div>
+    <hr *ngIf="_generateReport" />
 
+    <div class="email-template" *ngIf="_generateReport">
+        <div>
+            <img style="max-width:200px; margin-top: -7px; margin-left: auto; margin-right: auto; display: block;" src="/img/webcal.png"
+            alt="Webcal Calibration Software">
+        </div>
+        <div>
+            <h2>Your {{_reportType | splitByCapitals}} report</h2>
+            <table class="table table-striped table-hover table-responsive" *ngIf="_reportType === 'RecentCalibrations'">
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th>Company Name</th>
+                        <th>Doc Type</th>
+                        <th>Expiration</th>
+                        <th>Registration</th>
+                        <th>Technician</th>
+                        <th>Customer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="#recentCalibration of _recentCalibrations">
+                        <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType"
+                            /> </td>
+                        <td>{{recentCalibration.companyName}}</td>
+                        <td>{{recentCalibration.documentType}}</td>
+                        <td>{{asDate(recentCalibration.expiration) | date}}</td>
+                        <td>{{recentCalibration.registration}}</td>
+                        <td>{{recentCalibration.technician}}</td>
+                        <td>{{recentCalibration.customer}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="table table-striped table-hover table-responsive" *ngIf="_reportType === 'CalibrationsDue'">
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th>Date</th>
+                        <th>Expiration</th>
+                        <th>Registration</th>
+                        <th>Technician</th>
+                        <th>Customer</th>
+                        <th>Vehicle Manufacturer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="#calibrationDue of _calibrationsDue">
+                        <td><img src="/img/{{calibrationDue.documentIcon}}.png" [attr.alt]="calibrationDue.documentType" /> </td>
+                        <td>{{asDate(calibrationDue.date) | date}}</td>
+                        <td>{{asDate(calibrationDue.expiration) | date}}</td>
+                        <td>{{calibrationDue.registration}}</td>
+                        <td>{{calibrationDue.technician}}</td>
+                        <td>{{calibrationDue.customer}}</td>
+                        <td>{{calibrationDue.vehicleManufacturer}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
