--- a/app/generate-email/generate-email.component.html
+++ b/app/generate-email/generate-email.component.html
@@ -39,6 +39,7 @@
     <div class="row" *ngIf="!_isRequesting">
         <div class="col-xs-6">
             <wc-button (click)="updateReport()" [isDisabled]="_isUpdating" [label]="'Update Report'" [workingLabel]="'Updating Report...'"></wc-button>
+            <wc-button (click)="sendEmail()" [isDisabled]="_isSending" [label]="'Send Email'" [workingLabel]="'Sending Email...'"></wc-button>
         </div>
     </div>
     <div class="row">
@@ -52,7 +53,7 @@
             alt="Webcal Calibration Software">
         </div>
         <div>
-            <h2>Your {{_reportType | splitByCapitals}} report</h2>
+            <h2>Your {{_reportType | splitByCapitals}} Report</h2>
             <table class="table table-striped table-hover table-responsive" *ngIf="_reportType === 'RecentCalibrations'">
                 <thead>
                     <tr>
