--- a/app/centre-check/centre-check.component.html
+++ b/app/centre-check/centre-check.component.html
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <th>&nbsp;</th>
-                <th>Center Name</th>
+                <th>Centre Name</th>
                 <th>Seal Number</th>
                 <th>Date</th>
                 <th>Name</th>
