--- a/app/qc-check/qc-check.component.html
+++ b/app/qc-check/qc-check.component.html
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <th>&nbsp;</th>
-                <th>Center Name</th>
+                <th>Centre Name</th>
                 <th>Date</th>
                 <th>Manager Name</th>
                 <th>Technician Name</th>
