--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -15,10 +15,10 @@
             <label for="newClientName">Add new client</label>
             <div class="row">
                 <div class="col-xs-10">
-                    <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name">
+                    <input type="text" class="form-control" id="newClientName" [(ngModel)]="_newClientName" placeholder="New Client Name" required>
                 </div>
                 <div class="col-xs-2">
-                    <button class="btn btn-primary" (click)="addClient(_newClientName)">Add Client</button>
+                    <wc-button [isDisabled]="_isAdding" (click)="addClient(_newClientName)" [style]="'btn btn-primary'" [label]="'Add Client'" [workingLabel]="'Adding Client...'"></wc-button>
                 </div>
             </div>
         </div>
@@ -42,8 +42,9 @@
             <tr *ngFor="#client of _clients | clientName:filterValue | paginate: { itemsPerPage: 10, currentPage: p }">
                 <td>{{client.name}}</td>
                 <td>{{client.licenses.length}}</td>
-                <td class="actions">
-                    <button class="btn btn-secondary pull-right" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
+                <td class="actions text-right">
+                    <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
+                    <wc-button [isDisabled]="_isDeletingClient" (click)="deleteClient(client)" [style]="'btn btn-secondary'" [label]="'Delete Client'" [workingLabel]="'Deleting Client...'"></wc-button>
                 </td>
             </tr>
         </tbody>
@@ -64,7 +65,7 @@
                             <label for="newLicense">Add New License</label>
                             <input type="date" id="newLicense" name="newLicense" [(ngModel)]="_newLicenseExpiration" class="form-control" />
                         </div>
-                        <button class="btn btn-primary" (click)="addLicense(_newLicenseExpiration)">Add License</button>
+                        <wc-button [isDisabled]="_isAddingLicense" (click)="addLicense(_newLicenseExpiration)" [style]="'btn btn-primary'" [label]="'Add License'" [workingLabel]="'Adding License...'"></wc-button>
                     </div>
                 </div>
                 <div class="row" *ngIf="_selectedClient.licenses && _selectedClient.licenses.length > 0">
@@ -73,9 +74,10 @@
                         <table class="table table-striped table-hover table-responsive">
                             <thead>
                                 <tr>
-                                    <th class="max">License Code</th>
+                                    <th>License Code</th>
                                     <th>Expiry Date</th>
                                     <th>Expired?</th>
+                                    <th>&nbsp;</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -83,6 +85,9 @@
                                     <td>{{license.license}}</td>
                                     <td>{{asDate(license.expiration) | date}}</td>
                                     <td [innerHtml]="license.hasExpired | tick"></td>
+                                    <td class="actions">
+                                        <wc-button [isDisabled]="_isDeletingLicense" (click)="deleteLicense(_selectedClient, license)" [style]="'btn btn-secondary pull-right'" [label]="'Delete License'" [workingLabel]="'Deleting License...'"></wc-button>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -93,8 +98,5 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
-        <!-- /.modal-content -->
     </div>
-    <!-- /.modal-dialog -->
 </div>
-<!-- /.modal -->
